--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+
 </head>
+
 <body>
     <header>
         <nav>
-            
+            <div class="menu-icon">
+                <i class="fa fa-bars fa-2x"></i>
+            </div>
+            <div class="logo">
+                LOGO
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Bio</a></li>
+                    <li><a href="#">Releases</a></li>
+                    <li><a href="#">Platforms</a></li>
+                    <!-- <li><a href="#">Contact</a></li>
+                  <li><a href="#">Contact</a></li> -->
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section id="platforms">
+            <a href="https://open.spotify.com/intl-pt/artist/5R1yd5y1Aap6x2iFiXjPj1" target="_blank">
+                <i href="" style="font-size: 5rem" class="bi bi-spotify icons" id="spotifyicon"></i>
+            </a>
+            <a href="https://music.apple.com/br/artist/s3n0/1505832247" target="_blank">
+                <i style="font-size: 5rem" class="bi bi-apple icons" id="applemusicicon"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UCSYOtbEYaocHqC7mDwAXGHw" target="blank">
+                <i style="font-size: 5rem" class="bi bi-youtube icons" id="youtubeicon"></i>
+            </a>
+            <a href="https://soundcloud.com/s3n0" target="blank">
+                <i style="font-size: 5rem" class="fa fa-soundcloud icons" id="soundcloudicon"></i>
+            </a>
+        </section>
+        <!--  <div class="minhafoto">
+            <img src="/Images/fundo-preto-antigo-textura-do-grunge-papel-de-parede-escuro-quadro-negro-quadro-negro-parede-da-sala.jpg"
+                alt="S3N0 foto">
+        </div> -->
     </main>
-    <footer>
 
-    </footer>
 </body>
+<footer>
+    <div class="footer">
+
+    </div>
+
+</footer>
+
 </html>
