Mexendo na responsividade do site

--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -11,7 +11,6 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-
 </head>
 
 <body>
@@ -25,10 +24,10 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Bio</a></li>
-                    <li><a href="#">Releases</a></li>
-                    <li><a href="#">Platforms</a></li>
+                    <li><a href="#" id="home">Home</a></li>
+                    <li><a href="#" id="bio">Bio</a></li>
+                    <li><a href="#" id="releases">Releases</a></li>
+                    <li><a href="#" id="plataformas">Platforms</a></li>
                     <!-- <li><a href="#">Contact</a></li>
                   <li><a href="#">Contact</a></li> -->
                 </ul>
@@ -50,12 +49,55 @@
                 <i style="font-size: 5rem" class="fa fa-soundcloud icons" id="soundcloudicon"></i>
             </a>
         </section>
-        <!--  <div class="minhafoto">
-            <img src="/Images/fundo-preto-antigo-textura-do-grunge-papel-de-parede-escuro-quadro-negro-quadro-negro-parede-da-sala.jpg"
-                alt="S3N0 foto">
-        </div> -->
     </main>
+    <section id="biopage">
+        <div id="texto-bio">
+            <p> Nascido no Rio de Janeiro no ano de 1992, Tadeu Filho, artista que assina como "S3N0", teve seu
+                início na música aos 12 anos de idade.
+                <br><br>Começou estudando bateria, instrumento ao qual se dedicou inteiramente por pelo menos 8
+                anos. Em 2012 começou a aprender violão para aprimorar seus estudos sbre teoria musical.
+                <br><br>
 
+                Em 2013, junto com outros músicos, fundou sua banda de Heavy Metal, na qual era baterista e
+                compositor.
+                No entanto por divergência entre os integrantes, resolveu sair da banda e permaneceu em hiato
+                com a
+                música por pelo menos 6 anos. <br><br>
+
+                Em 2016 teve seu primeiro contato com a música eletrônica e só em 2019 começou a produzir suas
+                próprias músicas sempre prezando pela originalidade. <br><br>
+
+                Em pouco mais de 4 anos de produção musical, o artista ja soma mais de 1 milhão de reproduções
+                no
+                Spotify, tendo colaborações com diversos artistas da cena eletrônica nacional e mundial.<br><br>
+
+                Entre suas maiores colaborações estão os artistas, Pondora (Israel), Shanti People (india),
+                Sajanka(Israel), Henrique Camacho(Brazil), Pandora(Brazil), Vertigos(Israel), Memento Mori
+                (Suiça),
+                Inviktor (Brazil), Ritter(Brazil)...
+                <br><br>
+                Em 2013, junto com outros músicos, fundou sua banda de Heavy Metal, na qual era baterista e
+                compositor.
+                No entanto por divergência entre os integrantes, resolveu sair da banda e permaneceu em hiato
+                com a
+                música por pelo menos 6 anos. <br><br>
+
+                Em 2016 teve seu primeiro contato com a música eletrônica e só em 2019 começou a produzir suas
+                próprias músicas sempre prezando pela originalidade. <br><br>
+
+                Em pouco mais de 4 anos de produção musical, o artista ja soma mais de 1 milhão de reproduções
+                no
+                Spotify, tendo colaborações com diversos artistas da cena eletrônica nacional e mundial.<br><br>
+
+                Entre suas maiores colaborações estão os artistas, Pondora (Israel), Shanti People (india),
+                Sajanka(Israel), Henrique Camacho(Brazil), Pandora(Brazil), Vertigos(Israel), Memento Mori
+                (Suiça),
+                Inviktor (Brazil), Ritter(Brazil)...
+                
+                <br><br>
+            </p>
+        </div>
+    </section>
 </body>
 <footer>
     <div class="footer">
