Músicas e biografia colocadas

--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -51,6 +51,9 @@
         </section>
     </main>
     <section id="biopage">
+        <div id="bio-title">
+            <h1>Biografia</h1>
+        </div>
         <div id="texto-bio">
             <p> Nascido no Rio de Janeiro no ano de 1992, Tadeu Filho, artista que assina como "S3N0", teve seu
                 início na música aos 12 anos de idade.
@@ -101,113 +104,128 @@
     <section class="releases">
         <div class="flex-box">
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/track/1JI5SuVVmXWCGrJ8HiicxF?si=99013869233b4daf" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273b334b108e95e638386adabe8" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
+                    <h4><b>Chamunda</b></h4>
                 </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/track/56jKEFgeuq3vdlALzDYAl3?si=146fcd57b4c944d1" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273058f660ec46341437f70da12" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
+                    <h4><b>Soul Saxy</b></h4>
                 </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/track/0DrNPM4aDlGAIZDzrLKKm2?si=9e132d3f3e0d4cae" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b2737c7b0db3831d7586ee5e0dbe" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
+                    <h4><b>Edelerzi (Remix)</b></h4>
                 </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/album/6vlCr5b7hUYXG9tB4Zmnbw?si=K4J8b9B8T8SNrPtrZm3e0g" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b2739306f279e0cfdac32fa94b7b" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
+                    <h4><b>Igal</b></h4>
+                                    </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/album/3jDGiF3hNiKCrR2fitmqTI?si=a-QHwoZfT7CXpeHo2EaC-Q" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b27385a3c9d6e3b06313b272d3c1" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-        </div>
-        <div class="flex-box">
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
+                    <h4><b>Mahadeva</b></h4>
+                                    </div>
             </div>
         </div>
         <div class="flex-box">
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/album/7cIODIvTiq5sWNjLt2x9xn?si=XRaq1IA1RgmwIDRu-ceP5A" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273a021ba9f4447440a09d89dfb" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
+                    <h4><b>Sukanya</b></h4>
+                                    </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/album/6ha3muIztm0VavzhyEqKtV?si=mPqKgVNpTSKPsqBqZHdE_Q" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273b9010bb6123fe7a8b31e1564" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Malikah</b></h4>
+                                   </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/album/3bmhZ6TDXog4967MA29AlP?si=IAfch4LpTa-Cg46BHYkRcw" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273b39ca81bc93c63a96da9a9ae" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Tribal Soul</b></h4>
+                                  </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/intl-pt/album/6POjkorUF5fPeDH4pg5qO7?si=P6zRzIKLQEGTmCcBpQL5Rw" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273039e4f0e78aa2baf5aa21b0b" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Shiva Lingam (Remix)</b></h4>
+                                    </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/album/3YVt4clIaZMv7qDIkS6N6X?si=PHgdnhBUS7CpxYOD6kMUPQ" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b27376eadf982708fa157c650d99" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Hanuman</b></h4>
+                                   </div>
+            </div>
+        </div>
+        <div class="flex-box">
+            <div class="card">
+                <a href="https://open.spotify.com/album/0jUrDzsxwqjQNhUbYs7xbf?si=vsSQpoi6Qfi657BeAKomeg" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273d7dd0e4b814914585a55b72e" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Pharaoh</b></h4>
+                                   </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/album/2Zb9CIm8ywl6cwsjlLaL3g?si=_CQ9-5PHStOvTc1WlkGqyQ" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273e834780eeed54da113619a7d" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Surya</b></h4>
+                                   </div>
+            </div>
+            <div class="card">
+                <a href="https://open.spotify.com/album/0guyiEEONZYZKA93QiRjcm?si=ZbcUlbe0SkKQ_nT4xeLy0A" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273d4d878b3bf99a61b47f9d435" alt="Avatar" style="width:100%">
+                </a>
+                <div class="container">
+                    <h4><b>Vandaha (Remix)</b></h4>
                 </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/album/2YCQejIgFV1jPJ9iY1p5Bi?si=xRa5GVR7TvuY2dA4IlQN-A" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b2732dc73dce2530fa60ece1d44b" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
+                    <h4><b>Existence</b></h4>
+                                    </div>
             </div>
             <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                <a href="https://open.spotify.com/intl-pt/album/0c0nNSIJLQTjoBsIT8JjUX?si=uqHlnxKcSoqYNdAiO-NmOg" target="_blank">
+                    <img src="https://i.scdn.co/image/ab67616d0000b2732577d2b035dd3a44ed57927c" alt="Avatar" style="width:100%">
+                </a>
                 <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img_avatar.png" alt="Avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>John Doe</b></h4>
-                    <p>Architect & Engineer</p>
-                </div>
+                    <h4><b>Litha (Remix)</b></h4>
+                                  </div>
             </div>
         </div>
     </section>
