Cuidando da responsividade dos releases

--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li><a href="#" id="home">Home</a></li>
                     <li><a href="#" id="bio">Bio</a></li>
+                    <!-- <button class="btn" id="release1">Releases</button> -->
                     <li><a href="#" id="releases">Releases</a></li>
                     <li><a href="#" id="plataformas">Platforms</a></li>
                     <!-- <li><a href="#">Contact</a></li>
@@ -34,7 +35,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <section id="platforms">
             <a href="https://open.spotify.com/intl-pt/artist/5R1yd5y1Aap6x2iFiXjPj1" target="_blank">
                 <i href="" style="font-size: 5rem" class="bi bi-spotify icons" id="spotifyicon"></i>
@@ -101,7 +102,7 @@
             </p>
         </div>
     </section>
-    <section class="releases">
+    <section class="releases" id="lancamentos">
         <div class="flex-box">
             <div class="card">
                 <a href="https://open.spotify.com/intl-pt/track/1JI5SuVVmXWCGrJ8HiicxF?si=99013869233b4daf" target="_blank">
@@ -133,7 +134,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Igal</b></h4>
-                                    </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/intl-pt/album/3jDGiF3hNiKCrR2fitmqTI?si=a-QHwoZfT7CXpeHo2EaC-Q" target="_blank">
@@ -141,7 +142,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Mahadeva</b></h4>
-                                    </div>
+                </div>
             </div>
         </div>
         <div class="flex-box">
@@ -151,7 +152,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Sukanya</b></h4>
-                                    </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/album/6ha3muIztm0VavzhyEqKtV?si=mPqKgVNpTSKPsqBqZHdE_Q" target="_blank">
@@ -159,7 +160,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Malikah</b></h4>
-                                   </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/album/3bmhZ6TDXog4967MA29AlP?si=IAfch4LpTa-Cg46BHYkRcw" target="_blank">
@@ -167,7 +168,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Tribal Soul</b></h4>
-                                  </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/intl-pt/album/6POjkorUF5fPeDH4pg5qO7?si=P6zRzIKLQEGTmCcBpQL5Rw" target="_blank">
@@ -175,7 +176,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Shiva Lingam (Remix)</b></h4>
-                                    </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/album/3YVt4clIaZMv7qDIkS6N6X?si=PHgdnhBUS7CpxYOD6kMUPQ" target="_blank">
@@ -183,7 +184,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Hanuman</b></h4>
-                                   </div>
+                </div>
             </div>
         </div>
         <div class="flex-box">
@@ -193,7 +194,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Pharaoh</b></h4>
-                                   </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/album/2Zb9CIm8ywl6cwsjlLaL3g?si=_CQ9-5PHStOvTc1WlkGqyQ" target="_blank">
@@ -201,7 +202,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Surya</b></h4>
-                                   </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/album/0guyiEEONZYZKA93QiRjcm?si=ZbcUlbe0SkKQ_nT4xeLy0A" target="_blank">
@@ -217,7 +218,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Existence</b></h4>
-                                    </div>
+                </div>
             </div>
             <div class="card">
                 <a href="https://open.spotify.com/intl-pt/album/0c0nNSIJLQTjoBsIT8JjUX?si=uqHlnxKcSoqYNdAiO-NmOg" target="_blank">
@@ -225,7 +226,7 @@
                 </a>
                 <div class="container">
                     <h4><b>Litha (Remix)</b></h4>
-                                  </div>
+                </div>
             </div>
         </div>
     </section>
