--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -19,16 +19,14 @@
             <div class="menu-icon">
                 <i class="fa fa-bars fa-2x"></i>
             </div>
-            <div class="logo">
-                LOGO
-            </div>
             <div class="menu">
                 <ul>
+                    <img id="logo" src="/Images/S3NO_Symbol_White.png" alt="Minha logo">
                     <li><a href="#" id="home">Home</a></li>
-                    <li><a href="#" id="bio">Bio</a></li>
+                    <li><a href="#biopage" id="bio">Bio</a></li>
                     <!-- <button class="btn" id="release1">Releases</button> -->
-                    <li><a href="#" id="releases">Releases</a></li>
-                    <li><a href="#" id="plataformas">Platforms</a></li>
+                    <li><a href="#lancamentos" id="releases">Releases</a></li>
+                    <!-- <li><a href="#" id="plataformas">Platforms</a></li> -->
                     <!-- <li><a href="#">Contact</a></li>
                   <li><a href="#">Contact</a></li> -->
                 </ul>
