--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -21,7 +21,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <img id="logo" src="/Images/S3NO_Symbol_White.png" alt="Minha logo">
+                    <img id="logo" src="/MeuRepositorio/Portifólio/S3N0Website/Imagens/S3NO_Symbol_White.png" alt="Minha logo">
                     <li><a href="#" id="home">Home</a></li>
                     <li><a href="#biopage" id="bio">Bio</a></li>
                     <!-- <button class="btn" id="release1">Releases</button> -->
